service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  labels:
    app: wisecow
spec:
  type: LoadBalancer
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443  # Ensure this matches containerPort in deployment.yaml
