ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - https://verbose-funicular-wr7vwvjxq7qpf94qw-4499.app.github.dev/
    secretName: wisecow-tls
  rules:
  - host: https://verbose-funicular-wr7vwvjxq7qpf94qw-4499.app.github.dev/
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow-service
            port:
              number: 80
